# MonitoringParser

./: README.md  monitoring_list_parser.py  pyproject.toml  test_monitoring_list_parser.py
monitoringparser/: __init__.py  monitoring_list_parser.py  test_monitoring_list_parser.py
